--- a/ERFWebApplication/Site.Master
+++ b/ERFWebApplication/Site.Master
@@ -20,32 +20,14 @@
          var currentLocMarker = null;
          var directionsDisplay;
          var directionsService = new google.maps.DirectionsService();
-         var hospMarker = [""];
-         var hospDist = [""];
+         var hospMarker = [];
+         var infowindow = [];
+         var hospRoute = [];
+         var hospDist = [];
+         var lastShowMarker = null;
+         var lastinfowindow = null;
 
 
-         /*function initialize() {
-             if (GBrowserIsCompatible()) {
-                 map = new GMap2(document.getElementById("map_canvas"));
-                 map.setCenter(new GLatLng(37.4419, -122.1419), 13);
-                 geocoder = new GClientGeocoder();
-             }
-         }*/
-
-         /*function initialize() {
-             var mapOptions = {
-                 center: new google.maps.LatLng(24.183744, 120.60371),
-                 zoom: 8,
-                 mapTypeId: google.maps.MapTypeId.ROADMAP
-             };
-             var map = new google.maps.Map(document.getElementById("map_canvas"),
-            mapOptions);
-             new google.maps.Marker({
-                 position: new google.maps.LatLng(24.183744, 120.60371),
-                 map: map,
-                 title: 'Hello World!'
-             });
-         }*/
          
          function showAddress(address) {
              
@@ -85,15 +67,17 @@
                  });
               }
          }
-         var bestdist = 10000;
+         var bestdist = [10000,10000,10000];
          function calcRoute(start) {
-               
+
              var bestresult;
+             var bestresponse; 
+
              var warnings = document.getElementById("warnings_panel");
-             
+
              //warnings.innerHTML = "<b>" + hospMarker.length + ":" + bestdist + "</b>";
-             bestdist = 10000;
-             for (index = 0; index < hospMarker.length; index++) {
+
+             for (var index = 0; index < hospMarker.length; index++) {
                  var end = hospMarker[index].getPosition();
                  //var end = "Taipei";
                  var request = {
@@ -101,39 +85,64 @@
                      destination: end,
                      travelMode: google.maps.TravelMode.DRIVING
                  };
+                 //warnings.innerHTML = '<b> A ' + index + ' A </b>';
+                 infowindowShow = infowindow[index];
+                 MarkertoShow = hospMarker[index];
 
                  directionsService.route(request, function (response, status) {
                      if (status == google.maps.DirectionsStatus.OK) {
-                         
-                         
-                         //warnings.innerHTML = '<b>' + "GG" + '</b>';
-                         
-                         showinfo(response,index);
-                         //var myRoute = response.routes[0].legs[0];
-                         //var duration = myRoute.duration.value;
-                         //var distance = myRoute.distance.value;
-                         //hospDist[0] = myRoute.distance.value/1000;
-                         //bestdist = myRoute.distance.value / 1000;
-                         //warnings.innerHTML = '<b>' + hospDist[0] + '</b>';
 
-                         //str1.concat(bestdist, ":");
-                         
-                         /*if (hospDist[index] < bestdist) {
-                         bestdist = hospDist[index];
-                         bestresult = result;
-                         }*/
-                         //directionsDisplay.setDirections(response);
+                         //showinfo(response, infowindowShow, MarkertoShow);
+                         //showMarkerInfo(infowindow[index], hospMarker[index]);
+
+                         var myRoute = response.routes[0].legs[0];
+                         var duration = myRoute.duration.value;
+                         var distance = myRoute.distance.value;
+                         distance = distance / 1000.0;
+
+                         for (pos = 0; pos < 3; pos++) {
+                             if (distance < bestdist[pos]) {
+                                
+                             }
+                         }
+
+                         if (bestdist > distance) {
+                             bestdist = distance;
+                             directionsDisplay.setDirections(response);
+                             bestresult = 12;
+                             document.getElementById("warnings_panel").innerHTML = '行駛距離：' + distance;
+
+                             //showMarkerInfo(infowindowShow, MarkertoShow);
+                             //bestresponse = response;
+                         }
+
                      }
 
                  });
-
              }
+             //directionsDisplay.setDirections(bestresponse);
+             //warnings.innerHTML = "<b>" + hospRoute[0].duration.value + " "+hospRoute[1].duration.value+"</b>";
+
              //warnings.innerHTML = "<b>" + bestdist + "</b>";
              //directionsDisplay.setDirections(bestresult);
-
+             //warnings.innerHTML = '<b> A '+hospRoute[0]+ ' A </b>';
 
 
          }
+
+             
+
+
+         function showMarkerInfo(infowindowShow, MarkertoShow) {
+             if (lastShowMarker != null) {
+                 lastinfowindow.close(map, lastShowMarker);
+             }
+             lastinfowindow = infowindowShow;
+             lastShowMarker = MarkertoShow;
+             lastinfowindow.open(map, lastShowMarker);
+         }
+
+         
 
          function showRoute(Markerdest) {
 
@@ -152,7 +161,8 @@
                          var distance = myRoute.distance.value;
                          distance = distance / 1000.0;
                          directionsDisplay.setDirections(response);
-                         document.getElementById("warnings_panel").innerHTML = distance + ' km : ' + duration / 60;
+                         var arriveTime = new Date(Date.now() + duration * 1000);
+                         document.getElementById("warnings_panel").innerHTML = '行駛距離：' + distance + ' km  預估行駛時間：' + (duration / 60).toFixed(1) + '分鐘  預估到院時間：' + arriveTime.toLocaleTimeString();
                          //directionsDisplay.setDirections(response);
                      }
 
@@ -160,22 +170,25 @@
              }
          }
 
-         function showinfo(response,index) {
+         function showinfo(response, infowindowShow, MarkertoShow) {
              //warnings = document.getElementById("warnings_panel");
              var myRoute = response.routes[0].legs[0];
              var duration = myRoute.duration.value;
              var distance = myRoute.distance.value;
              distance = distance / 1000.0;
-             hospDist[index] = distance;
+             
              if (bestdist > distance) {
                  bestdist = distance;
                  directionsDisplay.setDirections(response);
-                 document.getElementById("warnings_panel").innerHTML = distance + ' km : ' + duration / 60;
+                 var arriveTime = new Date(Date.now() + duration*1000);
+                 document.getElementById("warnings_panel").innerHTML = ' 行駛距離：' + distance + ' km  預估行駛時間：' + (duration / 60).toFixed(1) + '分鐘  預估到院時間：' + arriveTime.toLocaleTimeString();
+                 //showMarkerInfo(infowindow[bestIdx], hospMarker[bestIdx]);
+                 //showMarkerInfo(infowindowShow, MarkertoShow);
              }
-             var markinfo = "siteNotice";
-             var str2 = index + 1;
-             var res = markinfo.concat(str2);
-             document.getElementById(res).innerHTML = distance + ' km : ' + duration / 60;
+             //var markinfo = "siteNotice";
+             //var str2 = index + 1;
+             //var res = markinfo.concat(str2);
+             //document.getElementById(res).innerHTML = distance + ' km : ' + duration / 60;
              //document.getElementById("warnings_panel").innerHTML = hospDist[index] + ' km';
              //warnings.innerHTML = "<b>" + "HEELO" + "</b>";
 
